# Exercicio3_2_4

./: CMakeLists.txt  E324  E324.cpp  Exercicio3_2_4.sln  Exercicio3_2_4.vcxproj  Exercicio3_2_4.vcxproj.filters
